docs/sf-export/sfdx-raw/objects/External_Data__c/External_Data__c.object-meta.xml
<CustomObject>
    <label>External Data</label>
    <nameField>
        <displayFormat>EX-{0000}</displayFormat>
        <label>External Data Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>External Datas</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>