docs/sf-export/sfdx-raw/objects/External_Data__c/fields/Client_External_Id__c.field-meta.xml
<CustomField>
    <fullName>Client_External_Id__c</fullName>
    <label>Client External Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>