docs/sf-export/sfdx-raw/objects/External_Data__c/fields/Debit_Date_Cleared__c.field-meta.xml
<CustomField>
    <fullName>Debit_Date_Cleared__c</fullName>
    <label>Debit Date Cleared</label>
    <length>255</length>
    <type>Text</type>
</CustomField>