docs/sf-export/sfdx-raw/objects/External_Data__c/fields/Draft__c.field-meta.xml
<CustomField>
    <fullName>Draft__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Draft</label>
    <referenceTo>Draft__c</referenceTo>
    <relationshipLabel>External Datas</relationshipLabel>
    <relationshipName>External_Datas</relationshipName>
    <type>Lookup</type>
</CustomField>