docs/sf-export/sfdx-raw/objects/External_Data__c/fields/External_API_Details__c.field-meta.xml
<CustomField>
    <fullName>External_API_Details__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>External API Details</label>
    <referenceTo>External_API_Details__c</referenceTo>
    <relationshipLabel>External Datas</relationshipLabel>
    <relationshipName>External_Datas</relationshipName>
    <type>Lookup</type>
</CustomField>