docs/sf-export/sfdx-raw/objects/External_Data__c/fields/Is_Child__c.field-meta.xml
<CustomField>
    <fullName>Is_Child__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Child</label>
    <type>Checkbox</type>
</CustomField>