docs/sf-export/sfdx-raw/objects/External_Data__c/fields/NSF_Reason__c.field-meta.xml
<CustomField>
    <fullName>NSF_Reason__c</fullName>
    <label>NSF Reason</label>
    <length>255</length>
    <type>Text</type>
</CustomField>