docs/sf-export/sfdx-raw/objects/External_Data__c/fields/Payment_SF_Id__c.field-meta.xml
<CustomField>
    <fullName>Payment_SF_Id__c</fullName>
    <label>Payment SF Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>